<resources>
    <string name="app_name">poPay</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- Navigation Menu -->
    <string name="menu_register">Register</string>
    <string name="menu_login">Login</string>

    <string name="menu_home">Cart</string>
    <string name="menu_credit">History</string>
    <!-- Strings related to login -->
    <string name="popay_logo_description">poPay Logo</string>

    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_full_name">Full name</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_show_details">Details</string>

    <string name="action_register">Register</string>
    <string name="action_edit_profile">Edit profile</string>

    <string name="welcome">"Welcome!"</string>

    <!-- Errors -->
    <string name="error_email_required">E-mail address is required</string>
    <string name="error_email_invalid">Invalid e-mail address</string>
    <string name="error_full_name_required">Full name is required</string>
    <string name="error_full_name_invalid">Full name must be 2 words</string>

    <string name="error_first_name_required">First name is required</string>
    <string name="error_last_name_required">Last name is required</string>
    <string name="error_password_required">Password name is required</string>
    <string name="error_password_invalid">Password must be 8 or more characters long</string>
    <string name="error_password1_required">Password confirmation is required</string>
    <string name="error_passwords_mismatch">Passwords must be the same</string>

    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Register failed"</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_btn_text">Add product</string>
    <string name="nfc_btn_text">Validate cart</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="add_to_cart_btn_text">Add to cart</string>
    <string name="scanned_product">Scanned product</string>
    <string name="profile">Profile</string>
    <string name="quantity_text">Quantity</string>
</resources>