<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_window_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:textAlignment="center"
    tools:context=".ProductPopup">

    <androidx.cardview.widget.CardView
        android:id="@+id/popup_window_view_with_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardBackgroundColor="@color/onyx"
        app:cardCornerRadius="@dimen/fragment_corner_radius"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ProductPopup">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/popup_window_background_container"
            android:layout_width="150pt"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/popup_window_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:background="@color/granite"
                android:gravity="center"
                android:text="@string/scanned_product"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:autoSizeMaxTextSize="24dp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toTopOf="@+id/popup_window_productname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/popup_window_productname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="Text"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/popup_window_productDesc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popup_window_title" />

            <TextView
                android:id="@+id/popup_window_productDesc"
                android:layout_width="0dp"
                android:layout_height="30pt"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="Description"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/text_quantity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popup_window_productname" />

            <ImageButton
                android:id="@+id/button_plus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/circle"
                android:contentDescription="@string/tab_text_2"
                app:cornerRadius="@dimen/fragment_corner_radius"
                app:iconTint="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/popup_window_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.215"
                app:layout_constraintStart_toEndOf="@+id/edit_text_quantite_value"
                app:layout_constraintTop_toBottomOf="@+id/text_quantity"
                app:layout_constraintVertical_bias="0.32999998"
                app:rippleColor="@color/gold"
                app:srcCompat="@drawable/ic_baseline_add_24" />

            <ImageButton
                android:id="@+id/button_minus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/circle"
                android:contentDescription="@string/tab_text_1"
                app:cornerRadius="@dimen/fragment_corner_radius"
                app:iconTint="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/popup_window_button"
                app:layout_constraintEnd_toStartOf="@+id/edit_text_quantite_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_quantity"
                app:layout_constraintVertical_bias="0.32999998"
                app:rippleColor="@color/gold"
                app:srcCompat="@drawable/ic_baseline_remove_24" />

            <TextView
                android:id="@+id/text_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/quantity_text"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/edit_text_quantite_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popup_window_productDesc" />

            <EditText
                android:id="@+id/edit_text_quantite_value"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="44dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:inputType="number"
                android:text="1"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/text_price"
                app:layout_constraintEnd_toStartOf="@+id/button_plus"
                app:layout_constraintStart_toEndOf="@+id/button_minus"
                app:layout_constraintTop_toBottomOf="@+id/text_quantity" />

            <TextView
                android:id="@+id/text_price"
                android:layout_width="115dp"
                android:layout_height="38dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="29.99$"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/popup_window_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_quantite_value" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/popup_window_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fragment_button_height"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/cyber_yellow"
                android:text="@string/add_to_cart_btn_text"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:cornerRadius="@dimen/fragment_corner_radius"
                app:iconTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_price"
                app:rippleColor="@color/gold" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>